// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "dart run orm"
  output   = "../lib/src/generated/prisma"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Device {
  id          Int       @id @default(autoincrement())
  title       String    @db.VarChar(45)
  description String?
  sn          String?   @unique @db.VarChar(45)
  publish     Publish   @default(ENABLE)
  createdAt   DateTime? @default(now())
  User        User      @relation(fields: [userId], references: [id])
  userId      Int
  widgets     Widget[]
}

model User {
  id         Int         @id @default(autoincrement())
  name       String      @db.VarChar(45)
  email      String      @unique @db.VarChar(45)
  password   String      @db.VarChar(64)
  role       Role        @default(USER)
  devices    Device[]
  dashboards Dashboard[]
  widgets    Widget[]
  createdAt  DateTime?   @default(now())
}

model Dashboard {
  id          Int       @id @default(autoincrement())
  title       String
  description String
  createdAt   DateTime? @default(now())
  User        User?     @relation(fields: [userId], references: [id])
  userId      Int?
  widgets     Widget[]
}

model Widget {
  id          Int        @id @default(autoincrement())
  title       String
  datasource  String
  User        User?      @relation(fields: [userId], references: [id])
  userId      Int?
  Dashboard   Dashboard? @relation(fields: [dashboardId], references: [id])
  dashboardId Int?
  Device      Device?    @relation(fields: [deviceId], references: [id])
  deviceId    Int?
}

enum Role {
  ADMIN /// allowed to do everything
  USER
}

enum Publish {
  ENABLE
  DISABLE
}
