//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Device {
  id Int [pk, increment]
  title String [not null]
  description String
  sn String [unique]
  publish Publish [not null, default: 'ENABLE']
  createdAt DateTime [default: `now()`]
  User User [not null]
  userId Int [not null]
  widgets Widget [not null]
}

Table User {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  role Role [not null, default: 'USER']
  devices Device [not null]
  dashboards Dashboard [not null]
  widgets Widget [not null]
  createdAt DateTime [default: `now()`]
}

Table Dashboard {
  id Int [pk, increment]
  title String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`]
  User User
  userId Int
  widgets Widget [not null]
}

Table Widget {
  id Int [pk, increment]
  title String [not null]
  datasource String [not null]
  User User
  userId Int
  Dashboard Dashboard
  dashboardId Int
  Device Device
  deviceId Int
}

Enum Role {
  ADMIN
  USER
}

Enum Publish {
  ENABLE
  DISABLE
}

Ref: Device.userId > User.id

Ref: Dashboard.userId > User.id

Ref: Widget.userId > User.id

Ref: Widget.dashboardId > Dashboard.id

Ref: Widget.deviceId > Device.id